--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>
     <meta charset="utf-8">
-  <title>Home Page</title>
+  <title>The Bagpiper!</title>
   <link rel="stylesheet" href="BWS.css" type="text/css">
-  </title>
+
 </head>
 <body background="clover.jpg.png">
     <div class="overlay">
